scrollbars fix

--- a/task1/src/styles/style.css
+++ b/task1/src/styles/style.css
@@ -13,6 +13,19 @@ body{
   min-width: 1000px;
 }
 
+::-webkit-scrollbar{
+  height: 0.1px;           
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 0;
+  background: #fff;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 0;
+  background: #ccc;
+}
 .header{
   height: 100vh;
   background: url(../assets/bg_header.png) no-repeat top right/cover;
@@ -199,6 +212,8 @@ body{
   display:flex;
   flex-wrap: wrap;
   margin: -0.5rem;
+  width:100vw;
+  /* margin: -1rem; */
 }
 
 .showcase-item{
